--- a/literature.bib
+++ b/literature.bib
@@ -2799,4 +2799,105 @@ title = {{Auxiliary{\_}readme}}
   year={2010},
   publisher={Wiley Online Library}
 }
+@article{warren2014boscastle,
+  title={A ‘Boscastle-type’quasi-stationary convective system over the UK Southwest Peninsula},
+  author={Warren, Robert A and Kirshbaum, Daniel J and Plant, Robert S and Lean, Humphrey W},
+  journal={Quarterly Journal of the Royal Meteorological Society},
+  volume={140},
+  number={678},
+  pages={240--257},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+@misc{metoffice2003nimrod,
+  title={1 km Resolution UK Composite Rainfall Data from the Met Office Nimrod System},
+  author={{Met Office}},
+  year={2003},
+  url={http://catalogue.ceda.ac.uk/uuid/27dd6ffba67f667a18c62de5c3456350},
+  publisher={NCAS British Atmospheric Data Centre}
+}
+@article{mphys2012radar,
+  title={Radar products for hydrological applications in the UK},
+  author={MPhys, Katie Norman},
+  journal={Proceedings of the Institution of Civil Engineers},
+  volume={165},
+  number={2},
+  pages={89},
+  year={2012},
+  publisher={ICE Publishing}
+}
+@article{nicotina2008impact,
+  title={On the impact of rainfall patterns on the hydrologic response},
+  author={Nic{\'o}tina, L and Alessi Celegon, E and Rinaldo, A and Marani, M},
+  journal={Water Resources Research},
+  volume={44},
+  number={12},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+@article{coulthard2016sensitivity,
+  title={The sensitivity of landscape evolution models to spatial and temporal rainfall resolution},
+  author={Coulthard, Tom J and Skinner, Christopher J},
+  journal={Earth Surface Dynamics},
+  volume={4},
+  number={3},
+  pages={757},
+  year={2016},
+  publisher={Copernicus GmbH}
+}
+@article{golding2005boscastle,
+  title={The Boscastle flood: Meteorological analysis of the conditions leading to flooding on 16 August 2004},
+  author={Golding, Brian and Clark, Peter and May, Bryony},
+  journal={Weather},
+  volume={60},
+  number={8},
+  pages={230--235},
+  year={2005},
+  publisher={Wiley Online Library}
+@book{beven2011rainfall,
+}
+  title={Rainfall-runoff modelling: the primer},
+  author={Beven, Keith J},
+  year={2011},
+  publisher={John Wiley \& Sons}
+}
+@article{sibley2009analysis,
+  title={Analysis of the North York Moors storms--19 June 2005},
+  author={Sibley, Andrew M},
+  journal={Weather},
+  volume={64},
+  number={2},
+  pages={39--42},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+@phdthesis{hopkins2012knowledge,
+  title={Knowledge of, and response to, upland flash flooding: a case study of flood risk management of the 2005 flash flood in upper Ryedale, North Yorkshire, UK},
+  author={Hopkins, Jonathan},
+  year={2012},
+  school={Durham University}
+}
+@article{wass2008investigation,
+  title={An investigation into the North Yorkshire floods of June 2005},
+  author={Wass, P and Faulkner, D and Curini, A},
+  journal={JBA Consulting, Skipton},
+  year={2008}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
